--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    window.location.replace("com.example.fl1_san_marcos_og://redirect");
+    //window.location.replace("com.example.fl1_san_marcos_og://redirect");
 </script>
 </body>
 </html>
